Fix grid showing on smaller screens

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,9 +76,6 @@ body {
     margin: 1%;
     padding: 1%;
 }
-#list-container {
-  display: none !important;
-}
 .custom-popup .leaflet-popup-content-wrapper {
   background: rgba(0, 0, 0, 0);
   box-shadow: none;
